hphp/test/slow/variadic_args/lambdas_variadic_trailing_non_variadic_1.php.expectf
Fatal error: A variadic parameter ('...') may only appear at the end of a parameter list. in %s/test/slow/variadic_args/lambdas_variadic_trailing_non_variadic_1.php on line 6